--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 
   curved_navigation_bar: ^1.0.6
   curved_labeled_navigation_bar: ^2.0.6
+  animated_search_bar: ^2.8.0
 
 dev_dependencies:
   flutter_test:
