--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,4 @@
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
       - main
@@ -11,6 +7,10 @@ on:
 
 name: "Build & Release"
 
+# 👇 IMPORTANT: Add this to give the workflow permission to write to your repo
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build & Release
@@ -18,6 +18,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # 👇 Step 1: Update the pubspec.yaml file
+      # This command finds the 'version:' line and replaces the build number
+      - name: Update Version
+        run: |
+          # Example: Changes 'version: 1.0.1+5' to 'version: 1.0.1+<run_number>'
+          sed -i '' "s/version: \(.*\)+[0-9]*/version: \1+${{ github.run_number }}/" pubspec.yaml
+
+      # 👇 Step 2: Commit the version change back to the repo
+      - name: Commit version bump
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "ci: Bump version to ${{ github.run_number }}"
+          file_pattern: pubspec.yaml
+
+      # --- The rest of your build process continues from here ---
 
       - name: Set up Java 17
         uses: actions/setup-java@v4
@@ -29,7 +45,6 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
 
       - name: Build Android APK
         run: flutter build apk --release --split-per-abi
@@ -46,5 +61,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*.apk,build/ios/iphoneos/app.ipa"
+          # The tag now uses the unique run number
           tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }} # Use the default token
