--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
-
   curved_navigation_bar: ^1.0.6
   curved_labeled_navigation_bar: ^2.0.6
   animated_search_bar: ^2.8.0
+  shared_preferences: ^2.5.3
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   assets:
     - assets/
     - assets/logo/
+    - assets/onboarding/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
