--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_search_bar: ^2.8.0
   shared_preferences: ^2.5.3
   font_awesome_flutter: ^10.12.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
