--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,16 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   curved_labeled_navigation_bar: ^2.0.6
   animated_search_bar: ^2.8.0
-  shared_preferences: ^2.5.3
+  shared_preferences: ^2.5.4
   font_awesome_flutter: ^10.12.0
   image_picker: ^1.2.1
+  http: ^1.6.0
+  provider: ^6.1.5+1
+  google_sign_in: ^7.2.0
+  flutter_dotenv: ^6.0.0
+  pin_code_fields: ^8.0.1
+  country_code_picker: ^3.4.1
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/
     - assets/logo/
     - assets/onboarding/
