--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "BACKEND_URL=${{ secrets.BACKEND_URL }}" > .env
-          echo "GOOGLE_CLIENT_ID=${{ secrets.ANDROID_GOOGLE_CLIENT_ID }}" >> .env
+          echo "ANDROID_GOOGLE_CLIENT_ID=${{ secrets.ANDROID_GOOGLE_CLIENT_ID }}" >> .env
 
       - name: Get Dependencies
         run: flutter pub get
